<resources>
    <string name="app_name">catDiary</string>
    <string name="change_text_style">폰트 설정</string>
    <string name="setting">설정</string>
    <string name="passwd_change">잠금 비밀번호 변경</string>
    <string name="dark_mode">다크모드</string>
    <string name="reset_diary">모든 일기 삭제</string>
    <string name="push">푸시 알림</string>
    <string name="diary_day">일기 날짜</string>
    <string name="diary_text">일기 내용</string>
    <string name="tag">#키워드</string>
    <string name="save">저장</string>
    <string name="toDay">오늘날짜</string>
    <string name="tagSearch">키워드 검색</string>
    <string name="example_text">박형준과 친구들 화이팅</string>

    <string-array name="custom_weekdays">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

</resources>