<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="left"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="50sp"
        android:layout_marginLeft="15sp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/fontChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#0000"
            android:gravity="center_vertical"
            android:text="@string/change_text_style"
            android:textColor="@color/OnSurface"
            android:textSize="20sp" />


        <Button
            android:id="@+id/changePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#0000"
            android:gravity="center_vertical"
            android:text="@string/passwd_change"
            android:textColor="@color/OnSurface"
            android:textSize="20sp" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/darkMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_weight="1"
            android:background="#0000"
            android:gravity="center_vertical"
            android:switchPadding="20sp"
            android:text="@string/dark_mode"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/push"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_weight="1"
            android:background="#0000"
            android:gravity="center_vertical"
            android:switchPadding="18sp"
            android:text="@string/push"
            android:textSize="20sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/resetBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#0000"
            android:gravity="center_vertical"
            android:text="@string/reset_diary"
            android:textColor="@color/Error"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>