<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/todayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:text="@string/diary_day"
            android:textColor="@color/OnSurface"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20sp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit_button" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/DiaryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20sp"
                android:text="@string/diary_text"
                android:textColor="@color/OnSurface" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20sp"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tagTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/tag"
        android:textColor="@color/TagColor" />

</LinearLayout>
